--- a/111108007.ipynb
+++ b/111108007.ipynb
@@ -38,7 +38,9 @@
    "source": [
     "實作過程如下：程式碼與結果\n",
     "\n",
+    "\n",
     "跟上課內容的關聯性：處理缺失值(0、中位數填補)、訓練過程相似、數據可視化(圖表轉換)\n",
+    "\n",
     "\n",
     "延伸學習了哪些：利用其他圖表呈現以及訓練模型作為預測結果"
    ]
@@ -51,12 +53,16 @@
     "比賽結果說明：\n",
     "  分數：0.74748 / 排名：1896 (共2429)\n",
     "\n",
+    "\n",
     "推測還可能從哪些方式改善：使用不同的訓練模型\n",
+    "\n",
     "\n",
     "不同的嘗試與結果分析：\n",
     "  若將以下連結的程式碼上傳至Kaggle，可能會得到更高的準確率，因為他填入缺失值的方式是使用姓名當中的稱謂中位數來填補，比起填中位數要準確的多。(但因著作權問題沒有實際測試，以上為參考蒐集到的相關資料)\n",
     "    程式碼連結：https://github.com/YLTsai0609/Kaggle-Titanic-Top3-percent/blob/master/Titanic%20Top%203%25%20on%20Medium.ipynb\n",
-    "    相關資料來源：https://yulongtsai.medium.com/https-medium-com-yulongtsai-titanic-top3-8e64741cc11f"
+    "    相關資料來源：https://yulongtsai.medium.com/https-medium-com-yulongtsai-titanic-top3-8e64741cc11f\n",
+    "\n",
+    "    "
    ]
   },
   {
