--- a/111108007.ipynb
+++ b/111108007.ipynb
@@ -14,10 +14,6 @@
     "\n",
     "    鐵達尼號宇宙飛船在繞過半人馬座阿爾法星前往第一個目的地——55 Cancri E的途中，闖進了隱藏在塵埃雲中時空異常區域。可悲的是，它遇到了與1000年前同名遊輪相同的命運。雖然飛船完好無損，但幾乎一半的乘客被運送到另一個維度！\n",
     "\n",
-    "  資料來源：\n",
-    "    https://www.kaggle.com/competitions/spaceship-titanic/overview\n",
-    "    https://www.cnblogs.com/bokeyuan199/p/16997206.html\n",
-    "\n",
     "\n",
     "為什麼選擇這個比賽：與機器學習高度相關，且相較其他競賽較為基礎，與剛踏入機器學習領域的我較為契合。\n",
     "\n",
@@ -933,6 +929,16 @@
     "real_predictions = list(map(bool,real_predictions))\n",
     "output = pd.DataFrame({'PassengerId': test.PassengerId, 'Transported': real_predictions})\n",
     "output.to_csv('submission.csv', index=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "資料來源：\n",
+    "    https://www.kaggle.com/competitions/spaceship-titanic/overview\n",
+    "    https://www.cnblogs.com/bokeyuan199/p/16997206.html"
    ]
   }
  ],
